--- a/css/main.css
+++ b/css/main.css
@@ -2348,51 +2348,57 @@ body {
 /* ==========================================================================
    Menu
    ========================================================================== */
-@media screen and (min-width: 481px) {
-  /* line 190, ../sass/main.scss */
-  .menu ul .icon-angle-down:before {
+@media screen and (min-width: 521px) {
+  /* line 192, ../sass/main.scss */
+  .masternav__menu ul .icon-angle-down:before {
     content: "\f105";
   }
 }
-/* line 196, ../sass/main.scss */
-.menu a {
+/* line 198, ../sass/main.scss */
+.masternav__menu a {
   text-decoration: none;
 }
-/* line 200, ../sass/main.scss */
-.menu a,
-.menu .show-sub-menu {
+/* line 202, ../sass/main.scss */
+.masternav__menu a,
+.masternav__menu .show-sub-menu {
   outline: none;
 }
-/* line 202, ../sass/main.scss */
-.menu a:focus,
-.menu .show-sub-menu:focus {
+/* line 204, ../sass/main.scss */
+.masternav__menu a:focus,
+.masternav__menu .show-sub-menu:focus {
   color: #1B4B3A;
 }
-/* line 206, ../sass/main.scss */
-.menu li {
+/* line 208, ../sass/main.scss */
+.masternav__menu li {
   background: #379F7A;
 }
-/* line 212, ../sass/main.scss */
-.menu li > a,
-.menu li > .show-sub-menu, .menu li[class*="icon-"] {
+/* line 214, ../sass/main.scss */
+.masternav__menu li > a,
+.masternav__menu li > .show-sub-menu, .masternav__menu li[class*="icon-"] {
   color: white;
 }
-/* line 218, ../sass/main.scss */
-.menu li:hover > a,
-.menu li:hover > .show-sub-menu, .menu li:hover[class*="icon-"] {
+/* line 220, ../sass/main.scss */
+.masternav__menu li:hover > a,
+.masternav__menu li:hover > .show-sub-menu, .masternav__menu li:hover[class*="icon-"] {
   color: #1B4B3A;
 }
 
-/* line 225, ../sass/main.scss */
-.menu-awning {
+/* line 227, ../sass/main.scss */
+.masternav__awning {
   color: white;
   background: #2A363B;
 }
 
-/* line 230, ../sass/main.scss */
-.menu-awning-button {
+/* line 232, ../sass/main.scss */
+.masternav__awning__button {
   color: white;
   outline: none;
+  background: #20272B;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
 }
 
 /* ==========================================================================
@@ -2401,7 +2407,7 @@ body {
 /*
  * Image replacement
  */
-/* line 243, ../sass/main.scss */
+/* line 247, ../sass/main.scss */
 .ir {
   background-color: transparent;
   border: 0;
@@ -2410,7 +2416,7 @@ body {
   *text-indent: -9999px;
 }
 
-/* line 251, ../sass/main.scss */
+/* line 255, ../sass/main.scss */
 .ir:before {
   content: "";
   display: block;
@@ -2421,7 +2427,7 @@ body {
 /*
  * Hide from both screenreaders and browsers: h5bp.com/u
  */
-/* line 262, ../sass/main.scss */
+/* line 266, ../sass/main.scss */
 .hidden {
   display: none !important;
   visibility: hidden;
@@ -2430,7 +2436,7 @@ body {
 /*
  * Hide only visually, but have it available for screenreaders: h5bp.com/v
  */
-/* line 271, ../sass/main.scss */
+/* line 275, ../sass/main.scss */
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -2446,7 +2452,7 @@ body {
  * Extends the .visuallyhidden class to allow the element to be focusable
  * when navigated to via the keyboard: h5bp.com/p
  */
-/* line 288, ../sass/main.scss */
+/* line 292, ../sass/main.scss */
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
   clip: auto;
@@ -2460,7 +2466,7 @@ body {
 /*
  * Hide visually and from screenreaders, but maintain layout
  */
-/* line 301, ../sass/main.scss */
+/* line 305, ../sass/main.scss */
 .invisible {
   visibility: hidden;
 }
@@ -2476,7 +2482,7 @@ body {
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
-/* line 318, ../sass/main.scss */
+/* line 322, ../sass/main.scss */
 .clearfix:before,
 .clearfix:after {
   content: " ";
@@ -2485,7 +2491,7 @@ body {
   /* 2 */
 }
 
-/* line 323, ../sass/main.scss */
+/* line 327, ../sass/main.scss */
 .clearfix:after {
   clear: both;
 }
@@ -2494,7 +2500,7 @@ body {
  * For IE 6/7 only
  * Include this rule to trigger hasLayout and contain floats.
  */
-/* line 332, ../sass/main.scss */
+/* line 336, ../sass/main.scss */
 .clearfix {
   *zoom: 1;
 }
@@ -2515,7 +2521,7 @@ body {
    Inlined to avoid required HTTP connection: h5bp.com/r
    ========================================================================== */
 @media print {
-  /* line 359, ../sass/main.scss */
+  /* line 363, ../sass/main.scss */
   * {
     background: transparent !important;
     color: #000 !important;
@@ -2524,18 +2530,18 @@ body {
     text-shadow: none !important;
   }
 
-  /* line 367, ../sass/main.scss */
+  /* line 371, ../sass/main.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 371, ../sass/main.scss */
+  /* line 375, ../sass/main.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 375, ../sass/main.scss */
+  /* line 379, ../sass/main.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -2543,33 +2549,33 @@ body {
   /*
    * Don't show links for images, or javascript/internal links
    */
-  /* line 385, ../sass/main.scss */
+  /* line 389, ../sass/main.scss */
   .ir a:after,
   a[href^="javascript:"]:after,
   a[href^="#"]:after {
     content: "";
   }
 
-  /* line 390, ../sass/main.scss */
+  /* line 394, ../sass/main.scss */
   pre,
   blockquote {
     border: 1px solid #999;
     page-break-inside: avoid;
   }
 
-  /* line 395, ../sass/main.scss */
+  /* line 399, ../sass/main.scss */
   thead {
     display: table-header-group;
     /* h5bp.com/t */
   }
 
-  /* line 400, ../sass/main.scss */
+  /* line 404, ../sass/main.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 404, ../sass/main.scss */
+  /* line 408, ../sass/main.scss */
   img {
     max-width: 100% !important;
   }
@@ -2578,7 +2584,7 @@ body {
     margin: 0.5cm;
 }
 
-  /* line 414, ../sass/main.scss */
+  /* line 418, ../sass/main.scss */
   p,
   h2,
   h3 {
@@ -2586,7 +2592,7 @@ body {
     widows: 3;
   }
 
-  /* line 420, ../sass/main.scss */
+  /* line 424, ../sass/main.scss */
   h2,
   h3 {
     page-break-after: avoid;
