--- a/css/menu.css
+++ b/css/menu.css
@@ -2148,186 +2148,174 @@
 /* ===================================================================================
    Responsive Navigation (https://github.com/MichalRazorZalecki/responsive-navigation)
    =================================================================================== */
-/* line 70, ../sass/menu.scss */
-.menu-awning {
-  line-height: 3.125em;
-  padding-left: 1em;
-}
-/* line 10, ../sass/_mixins.scss */
-.menu-awning:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-/* line 74, ../sass/menu.scss */
-.menu-awning .menu-awning-title {
-  font-size: 1.125em;
-}
-/* line 77, ../sass/menu.scss */
-.menu-awning .menu-awning-button {
-  font-size: 1.5em;
-  padding: 0 0.66666667em;
-  background: none;
-  border: 0;
-  float: right;
-  height: 2.08333333em;
-}
-
-/* line 86, ../sass/menu.scss */
-.menu {
-  display: none;
-  font-size: 1.125em;
-}
-/* line 10, ../sass/_mixins.scss */
-.menu:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-/* line 61, ../sass/menu.scss */
-.menu .sub-menu a {
-  padding-left: 32px;
-}
-/* line 61, ../sass/menu.scss */
-.menu .sub-menu .sub-menu a {
-  padding-left: 48px;
-}
-/* line 61, ../sass/menu.scss */
-.menu .sub-menu .sub-menu .sub-menu a {
-  padding-left: 64px;
-}
-/* line 96, ../sass/menu.scss */
-.menu > li[class*="icon-"]:before {
-  float: left;
-  margin-left: 0.88888889em;
-  width: 1.11111111em;
-  line-height: 2.22222222em;
-}
-/* line 102, ../sass/menu.scss */
-.menu > li[class*="icon-"] a {
-  padding-left: 2.22222222em;
-  z-index: 2;
+/* line 84, ../sass/menu.scss */
+.masternav__awning {
+  line-height: 3.125rem;
+  padding: 0 1.25rem;
+  font-size: 1.25rem;
   position: relative;
 }
-/* line 110, ../sass/menu.scss */
-.menu,
-.menu ul {
+/* line 10, ../sass/_mixins.scss */
+.masternav__awning:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* line 90, ../sass/menu.scss */
+.masternav__awning .masternav__awning__button {
+  padding: 0;
+  border: 0;
+  background: none;
+  position: absolute;
+  right: 1.25rem;
+  top: 0.625rem;
+  width: 1.875rem;
+  height: 1.875rem;
+}
+
+/* line 104, ../sass/menu.scss */
+.masternav__menu {
+  display: none;
+  font-size: 1.125rem;
+}
+/* line 10, ../sass/_mixins.scss */
+.masternav__menu:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* line 57, ../sass/menu.scss */
+.masternav__menu .sub-menu a {
+  padding-left: 40px;
+}
+/* line 57, ../sass/menu.scss */
+.masternav__menu .sub-menu .sub-menu a {
+  padding-left: 60px;
+}
+/* line 57, ../sass/menu.scss */
+.masternav__menu .sub-menu .sub-menu .sub-menu a {
+  padding-left: 80px;
+}
+/* line 113, ../sass/menu.scss */
+.masternav__menu li[class*="icon-"]:before {
+  display: none;
+}
+/* line 118, ../sass/menu.scss */
+.masternav__menu,
+.masternav__menu ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-/* line 116, ../sass/menu.scss */
-.menu ul {
+/* line 124, ../sass/menu.scss */
+.masternav__menu ul {
   display: none;
 }
-/* line 121, ../sass/menu.scss */
-.menu li {
-  line-height: 2.22222222em;
+/* line 128, ../sass/menu.scss */
+.masternav__menu li {
+  line-height: 2.5rem;
   position: relative;
 }
-/* line 125, ../sass/menu.scss */
-.menu li a {
-  display: block;
-  padding: 0 0.88888889em;
-}
 /* line 132, ../sass/menu.scss */
-.menu li.menu-item-has-children > a {
-  padding-right: 2.77777778em;
+.masternav__menu li a {
+  display: block;
+  padding: 0 1.25rem;
 }
 /* line 137, ../sass/menu.scss */
-.menu li .show-sub-menu {
+.masternav__menu li .show-sub-menu {
   background: none;
   border: 0;
-  height: 2.22222222em;
   padding: 0;
   position: absolute;
-  right: 0;
-  text-align: center;
-  top: 0;
   z-index: 2;
-  width: 2.77777778em;
-}
-/* line 151, ../sass/menu.scss */
-.menu > li {
-  line-height: 2.22222222em;
-}
-/* line 156, ../sass/menu.scss */
-.menu > li.menu-item-has-children > a {
-  padding-right: 2.77777778em;
-}
-/* line 161, ../sass/menu.scss */
-.menu > li > .show-sub-menu {
-  height: 2.22222222em;
-  width: 2.77777778em;
+  right: 1.25rem;
+  top: 0.3125rem;
+  width: 1.875rem;
+  height: 1.875rem;
 }
 
 @media screen and (min-width: 521px) {
-  /* line 170, ../sass/menu.scss */
-  .menu-awning {
+  /* line 156, ../sass/menu.scss */
+  .masternav__awning {
     display: none;
   }
 
-  /* line 173, ../sass/menu.scss */
-  .menu {
+  /* line 159, ../sass/menu.scss */
+  .masternav__menu {
     display: block !important;
     position: relative;
   }
-  /* line 182, ../sass/menu.scss */
-  .menu > li[class*="icon-"]:before {
+  /* line 169, ../sass/menu.scss */
+  .masternav__menu > li[class*="icon-"]:before {
+    display: block;
+    float: left;
+    margin: 0 0.25rem 0 1.25rem;
+    width: 1.25rem;
+    height: 3.125rem;
     line-height: 2.77777778em;
   }
-  /* line 186, ../sass/menu.scss */
-  .menu ul {
+  /* line 177, ../sass/menu.scss */
+  .masternav__menu > li[class*="icon-"] > a {
+    padding-left: 2.75rem;
+    z-index: 2;
+    position: relative;
+  }
+  /* line 183, ../sass/menu.scss */
+  .masternav__menu ul {
     left: 0;
-    top: 2.77777778em;
+    top: 3.125rem;
     z-index: 999;
     position: absolute;
   }
-  /* line 192, ../sass/menu.scss */
-  .menu ul ul {
+  /* line 189, ../sass/menu.scss */
+  .masternav__menu ul ul {
     left: 100%;
     top: 0;
   }
-  /* line 197, ../sass/menu.scss */
-  .menu ul a {
-    padding-left: 0.88888889em !important;
+  /* line 194, ../sass/menu.scss */
+  .masternav__menu ul a {
+    padding-left: 1.25rem !important;
   }
-  /* line 203, ../sass/menu.scss */
-  .menu li {
+  /* line 200, ../sass/menu.scss */
+  .masternav__menu li {
     white-space: nowrap;
   }
-  /* line 225, ../sass/menu.scss */
-  .menu > li {
-    display: inline-block;
-    margin-left: -0.27777778em;
-    line-height: 2.77777778em;
+  /* line 208, ../sass/menu.scss */
+  .masternav__menu li.menu-item-has-children > a {
+    padding-right: 3.125rem;
   }
-  /* line 230, ../sass/menu.scss */
-  .menu > li:first-child {
+  /* line 213, ../sass/menu.scss */
+  .masternav__menu li > .show-sub-menu {
+    right: 0.625rem;
+  }
+  /* line 218, ../sass/menu.scss */
+  .masternav__menu > li {
+    display: inline-block;
+    margin-left: -0.3125rem;
+    line-height: 3.125rem;
+  }
+  /* line 223, ../sass/menu.scss */
+  .masternav__menu > li:first-child {
     margin-left: 0;
   }
-  /* line 235, ../sass/menu.scss */
-  .menu > li > ul {
+  /* line 228, ../sass/menu.scss */
+  .masternav__menu > li > ul {
     min-width: 100%;
   }
-  /* line 239, ../sass/menu.scss */
-  .menu > li > .show-sub-menu {
-    height: 2.77777778em;
+  /* line 232, ../sass/menu.scss */
+  .masternav__menu > li > .show-sub-menu {
+    top: 0.625rem;
   }
 }
-/* line 282, ../sass/menu.scss */
-html.no-js .menu {
+/* line 241, ../sass/menu.scss */
+html.no-js .masternav__menu {
   display: block;
 }
-/* line 284, ../sass/menu.scss */
-html.no-js .menu .show-sub-menu {
-  display: none;
+/* line 244, ../sass/menu.scss */
+html.no-js .masternav__menu li:hover > ul {
+  display: block;
 }
-/* line 287, ../sass/menu.scss */
-html.no-js .menu .menu-item-has-children > a {
-  padding-right: 0.88888889em;
-}
-/* line 291, ../sass/menu.scss */
-html.no-js .menu-awning {
+/* line 249, ../sass/menu.scss */
+html.no-js .masternav__awning {
   display: none;
 }
